--- a/ShahWilayat/Views/Dashboard/Index.cshtml
+++ b/ShahWilayat/Views/Dashboard/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_MasterPage.cshtml";
 }
 
-<div class="row">
+@*<div class="row">
     <div class="col-12">
         <div class="card">
             <div class="card-header">
@@ -100,4 +100,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
