--- a/ShahWilayat/Views/Login/Index.cshtml
+++ b/ShahWilayat/Views/Login/Index.cshtml
@@ -35,6 +35,7 @@
     <link rel="stylesheet" type="text/css" href="~/Content/app-assets/css/pages/login-register.css">
     <!-- END Page Level CSS-->
     <!-- BEGIN Custom CSS-->
+    <link href="~/Content/app-assets/css/plugins/sweetalert/sweetalert.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="~/Content/assets/css/style.css">
     <!-- END Custom CSS-->
 </head>
@@ -57,22 +58,21 @@
                                         </div>
                                     </div>
                                     <h6 class="card-subtitle line-on-side text-muted text-center font-small-3 pt-2">
-                                        <span>Login with Modern</span>
+                                        <span>Login with Shah Wilayat Data Management System</span>
                                     </h6>
                                 </div>
                                 <div class="card-content">
                                     <div class="card-body">
-                                        <form class="form-horizontal form-simple" action="index.html" novalidate>
+                                        <div class="form-horizontal form-simple frmLogin" >
                                             <fieldset class="form-group position-relative has-icon-left mb-0">
-                                                <input type="text" class="form-control form-control-lg input-lg" id="user-name" placeholder="Your Username"
-                                                       required>
+                                                <input type="text" class="form-control form-control-lg input-lg txtEmail" id="txtEmail" placeholder="Enter email">
                                                 <div class="form-control-position">
                                                     <i class="ft-user"></i>
                                                 </div>
                                             </fieldset>
                                             <fieldset class="form-group position-relative has-icon-left">
-                                                <input type="password" class="form-control form-control-lg input-lg" id="user-password"
-                                                       placeholder="Enter Password" required>
+                                                <input type="password" class="form-control form-control-lg input-lg txtPassword" id="txtPassword"
+                                                       placeholder="Enter Password">
                                                 <div class="form-control-position">
                                                     <i class="la la-key"></i>
                                                 </div>
@@ -80,22 +80,22 @@
                                             <div class="form-group row">
                                                 <div class="col-md-6 col-12 text-center text-md-left">
                                                     <fieldset>
-                                                        <input type="checkbox" id="remember-me" class="chk-remember">
+                                                        <input type="checkbox" id="rememberme" class="chk-remember">
                                                         <label for="remember-me"> Remember Me</label>
                                                     </fieldset>
                                                 </div>
                                                 <div class="col-md-6 col-12 text-center text-md-right"><a href="recover-password.html" class="card-link">Forgot Password?</a></div>
                                             </div>
-                                            <button type="submit" class="btn btn-info btn-lg btn-block"><i class="ft-unlock"></i> Login</button>
-                                        </form>
+                                            <button type="button" class="btn btn-info btn-lg btn-block btnLogin"><i class="ft-unlock"></i> Login</button>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="card-footer">
-                                    <div class="">
-                                        <p class="float-sm-left text-center m-0"><a href="recover-password.html" class="card-link">Recover password</a></p>
-                                        <p class="float-sm-right text-center m-0">New to Moden Admin? <a href="register-simple.html" class="card-link">Sign Up</a></p>
-                                    </div>
-                                </div>
+                                @*<div class="card-footer">
+                                        <div class="">
+                                            <p class="float-sm-left text-center m-0"><a href="recover-password.html" class="card-link">Recover password</a></p>
+                                            <p class="float-sm-right text-center m-0">New to Moden Admin? <a href="register-simple.html" class="card-link">Sign Up</a></p>
+                                        </div>
+                                    </div>*@
                             </div>
                         </div>
                     </div>
@@ -119,6 +119,10 @@
     <!-- BEGIN PAGE LEVEL JS-->
     <script src="~/Scripts/app-assets/js/scripts/forms/form-login-register.js" type="text/javascript"></script>
     <!-- END PAGE LEVEL JS-->
+    <script src="~/Scripts/app-assets/vendors/js/sweetalert/sweetalert.min.js"></script>
+    <script src="~/Scripts/assets/js/PagesJS/Constant.js"></script>
+    <script src="~/Scripts/assets/js/PagesJS/Login.js"></script>
+
 </body>
 </html>
 
