--- a/ShahWilayat/Views/Member/Index.cshtml
+++ b/ShahWilayat/Views/Member/Index.cshtml
@@ -248,7 +248,7 @@
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach Recent Profile Picture</span>
+                                    <span class="fileinput-new">Attach CNIC Front</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicFrontFile" accept="image/*" />
                                 </span>
@@ -401,8 +401,8 @@
 
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="txtCNICExpiryDate_upd">CNIC Expiry Date</label>
-                                <input type="text" id="txtCNICExpiryDate_upd" class="form-control DatePicker txtCNICExpiryDate_upd" placeholder="yyyy-mm-dd">
+                                <label for="txtCnicExpiryDate_upd">CNIC Expiry Date</label>
+                                <input type="text" id="txtCnicExpiryDate_upd" class="form-control DatePicker txtCnicExpiryDate_upd" placeholder="yyyy-mm-dd">
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -458,6 +458,12 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
+                                <label for="txtMembershipDate_upd">Membership Date</label>
+                                <input type="text" id="txtMembershipDate_upd" class="form-control DatePicker txtMembershipDate_upd" placeholder="yyyy-mm-dd">
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
                                 <label for="txtReferenceNo_upd">Reference No</label>
                                 <input type="text" id="txtReferenceNo_upd" class="form-control txtReferenceNo_upd" placeholder="Enter reference number">
                             </div>
@@ -469,14 +475,39 @@
                             </div>
                         </div>
                     </div>
-                    <h4 class="form-section"><i class="ft-paperclip"></i> Attachments</h4>
+                    
+                    
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn grey btn-outline-info" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-dark btnUpdateChanges">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+@*Edit Modal Start*@
+
+@*Edit Attachment Start*@
+<div class="modal fade text-left" id="EditAttachment" role="dialog" aria-labelledby="myModalLabel16" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel16">Edit Attachment</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-body frmAttachment">
                     <hr>
                     <div class="row">
                         <div class="col-md-4">
                             <div class="fileinput fileinput-new" data-provides="fileinput">
 
                                 <span class="btn btn-block btn-outline btn-info btn-file">
-                                    <span class="fileinput-new">Attach Recent Profile Picture</span>
+                                    <span class="fileinput-new">Attach CNIC Front</span>
                                     <i class="fa fa-upload"></i>&nbsp;&nbsp;
                                     <span class="fileinput-exists">Change</span><input type="file" name="..." class="txtCnicFrontFile_upd" accept="image/*" />
                                 </span>
@@ -515,12 +546,12 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn grey btn-outline-info" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-outline-dark btnUpdateChanges">Save changes</button>
+                <button type="button" class="btn btn-outline-dark btnUpdateAttachment">Save changes</button>
             </div>
         </div>
     </div>
 </div>
-@*Edit Modal Start*@
+@*Edit Attachment Start*@
 
 @section Scripts
 {
@@ -548,6 +579,7 @@
             <input type="hidden" class="hdnCnicExpiryDate" value="${ToJavaScriptDate(CnicExpiryDate)}" />
             <input type="hidden" class="hdnBloodGroup" value="${BloodGroup}" />
             <input type="hidden" class="hdnPostalCode" value="${PostalCode}" />
+            <input type="hidden" class="hdnOccupation" value="${Occupation}" />
             <input type="hidden" class="hdnPermanentAddress" value="${PermanentAddress}" />
             <input type="hidden" class="hdnOccupation" value="${Occupation}" />
             <input type="hidden" class="hdnMembershipNo" value="${MembershipNo}" />
@@ -567,9 +599,9 @@
                 <div class="badge badge-success badge-pill ">Active</div>
             </td>
             <td class="project-title">
-                <a href="javascript:void(0)" onclick="EditStatus(this)" data-toggle="tooltip" data-placement="top" data-original-title="Change Status"><i class="ft-repeat info"></i></a>
-                <a href="javascript:void(0)" data-toggle="modal" data-target="#EditUser" onclick="editUser(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit User"><i class="la la-pencil-square success"></i></a>
-                <a href="javascript:void(0)" data-toggle="modal" data-target="#DeleteUser" onclick="editUser(this)" data-toggle="tooltip" data-placement="top" data-original-title="Delete User"><i class="la la-trash danger"></i></a>
+                <a href="javascript:void(0)" data-toggle="modal" data-target="#EditMember" onclick="EditMember(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit Member"><i class="la la-pencil-square success"></i></a>
+                <a href="javascript:void(0)" data-toggle="modal" data-target="#EditAttachment" onclick="EditMember(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit Attachment"><i class="ft-paperclip"></i></a>
+                <a href="javascript:void(0)" data-toggle="modal" data-target="#DeleteMember" onclick="EditMember(this)" data-toggle="tooltip" data-placement="top" data-original-title="Delete Member"><i class="la la-trash danger"></i></a>
             </td>
 
 
